# motion

./: .gitignore
motion-detection/: ._protobuf-2.6.1  ._sqlite-autoconf-3081002  ._sqlite-autoconf-3081002.tar  motion.db  motion.pb.cc  motion.pb.h
motion-detection/motion_src/: ._CMakeLists.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt~  Makefile  README.txt  clean.sh  cleanCMakeCache.txt.save  cmake_install.cmake  compile_commands.json  gmon.out
motion-detection/motion_src/data/mat/: 1446139786  1446460730  1446463932  1446463990  1446464172  1446491315  1446496544  1446502134  1446502150  1446502201  1446502212  1446504658  1446506289  1446506333  1446506861  1446509180  1446509305  1446509371  1446558133  1446558162  1446652358  1448016543  1448016937  1448017083  1448107822  1448108799  1448111681  1448112179  1448112425  1448112680  1448113021  1448113385  1448114245  1448114621  1448115430  1448115612  1448117025  1448137106  1448137873  1448138252  (+217 more)
motion-detection/motion_src/log/: README.txt  log_upload
motion-detection/motion_src/nbproject/: configurations.xml  project.xml
motion-detection/motion_src/nbproject/private/: configurations.xml  private.xml
motion-detection/motion_src/src/: reset.sh  reset.sh.save
motion-detection/motion_src/src/motion_cron/: remove_files.sh  upload_files_script.sh
motion-detection/motion_src/src/motion_detect/: ._global.h  ._main.cpp  ._main~.cpp  ._remotecam.cpp  ._remotecam.hpp  ._send_data.cpp  ._send_data.hpp  ._streamvideo.cpp  MAT.txt  all_blocks.txt  base64oish.txt  curl_location.txt  encoded_proto.txt  file_region.txt  global.h  gmon.out  main.cpp  main.cpp.sb-329444c5-Tuoke1  main.cpp~  main_backp.cpp  main_backup_2.cpp  motion_detect_raspberry  remotecam.cpp  remotecam.cpp~  remotecam.hpp  remotecam.hpp~  send_data.cpp  send_data.cpp~  send_data.hpp  streamvideo.cpp  xml.txt  xmlEncoded.txt
motion-detection/motion_src/src/motion_detect/analysis/: Analize.cpp  Analize.h
motion-detection/motion_src/src/motion_detect/b64/: ._base64.cpp  ._base64.h  ._cdecode.c  ._cencode.c  ._decode.h  ._encode.h  base64.cpp  cdecode.c  cencode.c  encode.h
motion-detection/motion_src/src/motion_detect/data/: PROTO_0.txt  camera_0.txt  camera_1.txt
motion-detection/motion_src/src/motion_detect/data/data/: backup.proto  backup.txt  localproto.txt
motion-detection/motion_src/src/motion_detect/data/mat/: 1439844830  1449113319  1449113445  1449114034  1450136183  1992947591  1993519283  2127336475  2127337741  2147483647
motion-detection/motion_src/src/motion_detect/data/thumbnails/: 1458669941.mat  1458669942.mat  1458670106.mat  1458670107.mat  1458676684.mat  1458676685.mat  1458678098.mat  1458678351.mat  1458678352.mat  1458678552.mat  1458678553.mat  1458681760.mat  1458681761.mat  1458682320.mat  1458684767.mat  1458684768.mat  1458685547.mat  1458685548.mat  1458687153.mat  1458687154.mat  1458688263.mat  1458688264.mat
motion-detection/motion_src/src/motion_detect/database/: ._database.cpp  ._database.h  database.cpp  database.h  motion.db
motion-detection/motion_src/src/motion_detect/http/: httppost.c  json.cpp  json.h  post.cpp  post.h
motion-detection/motion_src/src/motion_detect/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  configurations.xml~  project.xml
motion-detection/motion_src/src/motion_detect/nbproject/private/: configurations.xml  private.xml
motion-detection/motion_src/src/motion_detect/ntp/: ndp_client.cpp
motion-detection/motion_src/src/motion_detect/operations/: camera.cpp  camera.h  communications.cpp  communications.h  observer.cpp  observer.h  startup.cpp  startup.h
motion-detection/motion_src/src/motion_detect/practical/: ._PracticalSocket.cpp  ._sendmessage.cpp  ._sendmessage.h  PracticalSocket.h  sendmessage.cpp  sendmessage.h  sendmessage_back.cpp  sendmessage_backup_2.cpp
motion-detection/motion_src/src/motion_detect/protobuffer/: ._motion_protocol.pb.cc  motion.pb.cc  motion.pb.h  server.pb.cc  server.pb.h
motion-detection/motion_src/src/motion_detect/recognition/: ._detection.cpp  ._detection.h  ._detection~.cpp  detection.cpp  detection.cpp.save  detection.h  detection_mal.cpp
motion-detection/motion_src/src/motion_detect/socket/: ._netcvc.cpp  ._netcvc.h  ._streamlistener.cpp  ._streamlistener.h  ._udp-recv.c  ._udp-send.c  ._udp-send.h  netcvc.cpp  netcvc.h  streamlistener.cpp  streamlistener.h  udp-recv.c  udp-send.c
motion-detection/motion_src/src/motion_detect/streaming/: ._screenshot.cpp  ._streamvideo.h  remotecam.cpp  remotecam.hpp  screenshot.cpp  send_data.cpp  streamvideo.cpp
motion-detection/motion_src/src/motion_detect/tinyxml/: CMakeLists.txt~
motion-detection/motion_src/src/motion_detect/utils/: utils.cpp  utils.h
motion-detection/motion_src/src/motion_web/: index.php
motion-detection/motion_src/src/motion_web/apache.conf/: apache2.conf
motion-detection/motion_src/src/motion_web/apache.conf/conf.d/: user-dir.conf
motion-detection/motion_src/src/motion_web/log/: log_remove
motion-detection/motion_src/src/motion_web/nbproject/: project.xml
motion-detection/motion_src/src/motion_web/pics/: README.txt  motion.pb.cc
motion-detection/motion_src/src/motion_web/pics/02Jun2015/xml/: <import>session.xml
motion-detection/motion_src/src/motion_web/pics/21Apr2015/cropped/xml/: motion.xml
motion-detection/motion_src/src/motion_web/pics/camera0/JOSE/07Oct2015/xml/: <import>session.xml
motion-detection/motion_src/src/motion_web/pics/camera0/LIVING/06Oct2015/xml/: <import>session.xml
motion-detection/motion_src/src/motion_web/pics/camera0/PARED/07Oct2015/xml/: <import>session.xml
motion-detection/motion_src/src/motion_web/pics/camera0/TELE/06Oct2015/xml/: <import>session.xml
motion-detection/motion_src/src/motion_web/pics/region/: region.xml  region_init.xml
motion-detection/motion_src/src/motion_web/samba/: smb.conf
motion-detection/protobuf-2.6.1/: ._CHANGES.txt  ._CONTRIBUTORS.txt  ._INSTALL.txt  ._LICENSE  (+27 more)
(+800 files in other folders)
